Added process, type-features and solution sections

--- a/src/index.pug
+++ b/src/index.pug
@@ -13,4 +13,8 @@ html(lang='en')
         title Product Landing Page
     body
         include includes/hero
-        include includes/features
+        main
+          include includes/features
+          include includes/process
+          include includes/type-faetures
+          include includes/solution
