Готовы все основные блоки, кроме футера

--- a/src/index.pug
+++ b/src/index.pug
@@ -18,3 +18,7 @@ html(lang='en')
           include includes/process
           include includes/type-faetures
           include includes/solution
+          include includes/pricing
+          .divider
+          include includes/subscribe
+        include includes/footer
