--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -37,6 +37,13 @@
     background-color: #03D6F3;
     padding: 30px 0;
   }
+
+  &-common {
+    background-color: #03D6F3;
+    padding: 18px 0;
+    width: 251px;
+
+  }
 }
 
 .cyan-border {
