--- a/src/styles/_pricing.scss
+++ b/src/styles/_pricing.scss
@@ -1,11 +1,11 @@
-.solution {
+.pricing {
   width: 100%;
   height: auto;
-  margin-top: 50px;
-  padding: 72px 30px 62px 30px;
+  padding: 60px 94px 94px 103px;
+  margin-top: 47px;
 
   &__title {
-    width: 374px;
+    width: 340px;
     margin: 0 auto;
     //typography
     font-size: 46px;
@@ -15,9 +15,10 @@
     letter-spacing: 0.2px;
     text-align: center;
   }
+
   &__paragraph {
-    width: 352px;
-    margin: 27px auto 0;
+    margin-top: 22px;
+    margin-bottom: 65px;
     //typography
     color: #5C5C5C;
     font-size: 18px;
@@ -26,14 +27,6 @@
     line-height: 27px;
     letter-spacing: 0.2px;
     text-align: center;
-  }
 
-  &__screen {
-    width: 463px;
-    margin: 79px auto 0;
-  }
-
-  &__buttons {
-    margin-top: 69px;
   }
 }
