Готова десктопная версия

--- a/src/includes/features.pug
+++ b/src/includes/features.pug
@@ -1,6 +1,7 @@
 include features-card
 section.features
   h2.features__title  FigmaLand was Built Specifically for You
-  +featuresCard('management', 'Management', 'light')
-  +featuresCard('support', 'Customer Support', 'atom')
-  +featuresCard('collaborative', 'Collaborative', 'frame')
+  .features__cards
+    +featuresCard('management', 'Management', 'light')
+    +featuresCard('support', 'Customer Support', 'atom')
+    +featuresCard('collaborative', 'Collaborative', 'frame')
