--- a/src/includes/footer.pug
+++ b/src/includes/footer.pug
@@ -16,6 +16,9 @@ footer.footer
          p #[span.map-marker] 7480 Mockingbird Hill undefined
          p #[span.phone-icon] (239) 555-0108
      ul.social
-         li.twitter twitter
-         li.facebook facebook
-         li.linkedin linkedin
+         a(href="https://twitter.com/" target="_blank" rel="noopener noreferrer")
+           li.twitter
+         a(href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer")
+           li.facebook
+         a(href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer")
+           li.linkedin
