--- a/src/includes/pricing.pug
+++ b/src/includes/pricing.pug
@@ -4,6 +4,7 @@ section.pricing
   p.pricing__paragraph.
       Slate helps you see how many
       more days you need
-  +pricingCard("Education", "assets/education.png", "education", "0", "education")
-  +pricingCard("Professional", "assets/professional.png", "professional", "10", "professional")
-  +pricingCard("Business", "assets/business.png", "business", "99", "business")
+  .pricing__cards
+    +pricingCard("Education", "assets/education.png", "education", "0", "education")
+    +pricingCard("Professional", "assets/professional.png", "professional", "10", "professional")
+    +pricingCard("Business", "assets/business.png", "business", "99", "business")
