--- a/src/includes/process.pug
+++ b/src/includes/process.pug
@@ -1,7 +1,8 @@
 include button
 section.process
-  h2.process__title Quick & Easy Process
-  p.process__paragraph.
+  .process__description
+    h2.process__title Quick & Easy Process
+    p.process__paragraph.
       Most calendars are designed for teams.
       Slate is designed for freelancers who
       want a simple way to plan
