--- a/src/includes/type-faetures.pug
+++ b/src/includes/type-faetures.pug
@@ -1,7 +1,8 @@
 include button
 section.type-features
-  h2.type-features__title OpenType features and Variable fonts
-  p.type-features__paragraph.
+  .type-features__description
+    h2.type-features__title OpenType features and Variable fonts
+    p.type-features__paragraph.
       Most calendars are designed for teams.
       Slate is designed for freelancers who
       want a simple way to plan
