--- a/src/includes/solution.pug
+++ b/src/includes/solution.pug
@@ -1,12 +1,14 @@
 include button
 section.solution
-  h2.solution__title Perfect solution for small businesse
-  p.solution__paragraph.
+  .solution__description
+    h2.solution__title Perfect solution for small businesse
+    p.solution__paragraph.
       Being a freelancer is a rollercoaster of
       emotions. We built Slate to keep your
       freelance business less stressful....
   .solution__screen
-      img(src="assets/solution-screen.png" alt="solution screenshot" width="463" height="282")
+      img(src="assets/solution-screen.png" alt="solution screenshot" width="463" height="282" class="mobile-img")
+      img(src="assets/solution-screen-desktop.png" alt="solution screenshot" width="824" height="607" class="desktop-img")
   .solution__buttons
       +button("#", "cyan-fat", "sign up for free")
       +button("#", "cyan-border-fat", "find out more")
