--- a/src/index.pug
+++ b/src/index.pug
@@ -22,3 +22,4 @@ html(lang='en')
           .divider
           include includes/subscribe
         include includes/footer
+        script(src="main.js")
