--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,10 +9,13 @@
 @import "pricing-card";
 @import "subscribe";
 @import "footer";
+@import "media";
 
 .divider {
-  width: 453px;
+  width: 90%;
   height: 1px;
   margin: 0 auto;
   background-color: #d2d2d2;
 }
+
+
