--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -60,9 +60,9 @@
     margin-top: 51px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 225px 60px;
+    grid-template-rows: repeat(2, auto);
     align-items: center;
-    justify-content: center;
+
 
     &__title {
       width: 494px;
@@ -76,6 +76,8 @@
       display: flex;
       margin: 0;
       align-items: center;
+      justify-content: center;
+      align-self: start;
       grid-column: 1/2;
       grid-row: 2/3;
 
@@ -91,8 +93,8 @@
     margin-top: 51px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 225px 60px;
-    align-items: center;
+    grid-template-rows: repeat(2, auto);
+    align-items: end;
     justify-content: center;
     justify-items: start;
 
@@ -130,6 +132,7 @@
     margin-top: 51px;
     display: grid;
     align-items: start;
+    justify-items: center;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
 
@@ -140,12 +143,14 @@
 
     &__title {
       text-align: left;
+      margin: 0;
     }
 
     &__paragraph {
       width: 301px;
       text-align: left;
-      margin: 0 0 0 50px;
+      margin: 47px 0 0;
+
     }
 
     &__screen {
@@ -160,6 +165,7 @@
       align-items: center;
       grid-row: 2/3;
       grid-column: 1/2;
+      margin-top: 90px;
     }
 
   }
@@ -226,7 +232,7 @@
 
   .btn {
     width: 184px;
-    margin-top: 0;
+    margin: 0;
   }
 
   .white {
@@ -239,6 +245,9 @@
 
   .mobile-img {
     display: none;
+  }
+  .cyan {
+    margin-right: 22px;
   }
 
   .cyan-border {
@@ -253,6 +262,7 @@
   .cyan-border-fat {
     width: 216px;
     padding: 18px 0;
+    margin-left: 7px;
   }
 
 }
