--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -88,7 +88,12 @@
 
   &__screen {
     width: 427px;
+    height: auto;
     margin: 95px auto 0;
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
 
