--- a/src/styles/_process.scss
+++ b/src/styles/_process.scss
@@ -30,6 +30,15 @@
     text-align: left;
   }
 
+  &__screen {
+    width: 463px;
+    height: auto;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
 
   &__buttons {
     margin-top: 88px;
