--- a/src/styles/_solution.scss
+++ b/src/styles/_solution.scss
@@ -30,7 +30,12 @@
 
   &__screen {
     width: 463px;
+    height: auto;
     margin: 79px auto 0;
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   &__buttons {
