--- a/src/styles/_type-features.scss
+++ b/src/styles/_type-features.scss
@@ -40,7 +40,13 @@
   }
 
   &__screen {
+    width: 463px;
+    height: auto;
     margin-top: 70px;
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   &__button {
