--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -12,6 +12,38 @@ a {
   text-decoration: none;
 }
 
-@mixin transition-ease {
-  transition: all 0.5s ease-in-out;
+.hidden {
+  display: none;
+}
+
+@mixin button-typography {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 0.2px;
+  text-align: left;
+}
+
+@mixin title-typography {
+  font-size: 46px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 57px;
+  letter-spacing: 0.2px;
+  text-align: center;
+}
+
+@mixin paragraph-typography {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px;
+  letter-spacing: 0.2px;
+  text-align: center;
+}
+
+@mixin image-sizes {
+  width: 100%;
+  height: auto;
 }
