--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -34,12 +34,14 @@
     &__promo-subtitle {
       width: 462px;
     }
+
     &__buttons {
       display: flex;
       width: 400px;
       align-items: center;
       margin: 71px auto 0;
     }
+
     &__screen {
       width: 1080px;
     }
@@ -47,6 +49,7 @@
 
   .features {
     margin-top: 51px;
+
     &__title {
       width: 765px;
     }
@@ -111,9 +114,11 @@
       width: 480px;
       margin: 47px 0 55px;
     }
+
     &__link {
       display: none;
     }
+
     &__screen {
       grid-column: 1/2;
       grid-row: 1/3;
@@ -171,9 +176,10 @@
   }
 
   .pricing {
-     &__title {
-       width: 674px;
-     }
+    &__title {
+      width: 674px;
+    }
+
     &__cards {
       display: flex;
     }
@@ -281,31 +287,19 @@
 
 @media (max-width: 479px) {
   .hero {
-    &__header {
-      flex-direction: column;
-      align-items: center;
-    }
-
-    &__promo-title {
-      width: 292px;
-    }
-
-    &__promo-subtitle {
-      width: 300px;
-    }
-
-    &__screen {
-      width: 283px;
+    &__logo {
+      width: 130px;
       height: auto;
-      margin: 0;
       img {
         width: 100%;
+        height: auto;
       }
     }
   }
 
   .features {
     padding: 40px 30px;
+
     &__title {
       width: 100%;
       font-size: 42px;
@@ -395,6 +389,7 @@
 
   .pricing {
     padding: 15px;
+
     &__title {
       width: 100%;
     }
