переделала секцию features и process

--- a/src/includes/hero.pug
+++ b/src/includes/hero.pug
@@ -23,6 +23,6 @@ section.hero
     +button('#', 'white', 'get started')
     +button('#', 'ghost', 'try for free')
   .hero__screen
-      img(src="assets/screen-desktop.png" alt="screenshot" width="1085" height="670" class="desktop-img")
+      img(src="assets/hero-screen.png" alt="screenshot" width="1085" height="670")
 
 
