--- a/src/includes/process.pug
+++ b/src/includes/process.pug
@@ -8,7 +8,7 @@ section.process
       want a simple way to plan
       their schedule.
   .process__screen
-      img(src="assets/process-screen-desktop.png" alt="process screenshot" width="578" height="548" class="desktop-img")
+      img(src="assets/process-screen.png" alt="process screenshot" width="578" height="548")
   .process__buttons
       +button('#', 'cyan', 'sign up for free')
       +button('#', 'cyan-border', 'find out more')
