--- a/docs/style.css
+++ b/docs/style.css
@@ -25,7 +25,8 @@ a {
   background: linear-gradient(45deg, #37BDA6, #CB1AE8);
 }
 .hero__header {
-  margin-bottom: 79px;
+  width: 100%;
+  margin: 0 auto 79px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -43,9 +44,13 @@ a {
 }
 .hero__menu {
   position: absolute;
+  width: 95%;
   top: 90px;
-  left: 80%;
-  background-color: #CB1AE8;
+  left: 2%;
+  background-color: #bc1ad7;
+  -webkit-box-shadow: 0 0 14px #232323;
+          box-shadow: 0 0 14px #232323;
+  border-radius: 6px;
   list-style: none;
   padding: 10px 15px;
   z-index: 1000;
@@ -188,6 +193,9 @@ a {
   letter-spacing: 0.2px;
   text-align: center;
 }
+.features__cards {
+  margin-top: 45px;
+}
 .features__card {
   width: 401px;
   margin: 64px auto 0;
@@ -197,11 +205,13 @@ a {
   -webkit-box-shadow: 0 4px 31px 0 #00000026;
           box-shadow: 0 4px 31px 0 #00000026;
 }
+.features__card:first-child {
+  margin-top: 0;
+}
 .features__card .icon {
   width: 62px;
   height: 62px;
   margin: 0 auto 22px;
-  background-color: #37BDA6;
 }
 .features__card .icon.light {
   background: url("assets/light.svg") 0 0 no-repeat;
@@ -223,13 +233,13 @@ a {
 .features__card__content {
   width: 281px;
   margin: 30px auto;
+  color: #5C5C5C;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 27px;
   letter-spacing: 0.2px;
   text-align: center;
-  color: #5C5C5C;
 }
 .features__card a {
   color: #03D6F3;
@@ -239,46 +249,52 @@ a {
   -webkit-box-shadow: none;
           box-shadow: none;
   background: linear-gradient(45deg, #37BDA6, #CB1AE8);
-  color: white;
+  color: #ffffff;
 }
 .features__card.support p {
-  color: white;
+  color: #ffffff;
 }
 .features__card.support a {
-  color: white;
+  color: #ffffff;
 }
 
 .process {
   width: 100%;
   height: auto;
-  padding: 58px 30px 48px;
+  padding: 58px 6% 48px;
   margin-top: 47px;
   text-align: center;
 }
-.process__title {
-  width: 303px;
+.process__description {
+  width: 66%;
   margin: 0 auto;
+}
+.process__title {
+  width: 100%;
+  margin-bottom: 27px;
   font-size: 46px;
   font-style: normal;
   font-weight: 500;
   line-height: 57px;
   letter-spacing: 0.2px;
+  text-align: center;
   text-align: left;
 }
 .process__paragraph {
   width: 335px;
-  margin: 27px auto 0;
-  color: #5C5C5C;
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
   line-height: 20px;
-  letter-spacing: 0.1px;
+  letter-spacing: 0.2px;
+  text-align: center;
+  color: #5C5C5C;
   text-align: left;
 }
 .process__screen {
-  width: 463px;
+  width: 100%;
   height: auto;
+  margin: 98px auto 0;
 }
 .process__screen img {
   width: 100%;
@@ -291,9 +307,8 @@ a {
 .type-features {
   width: 100%;
   height: auto;
-  padding: 58px 30px 48px;
+  padding: 58px 6% 48px;
   margin-top: 47px;
-  text-align: center;
 }
 .type-features__title {
   width: 328px;
@@ -303,6 +318,7 @@ a {
   font-weight: 500;
   line-height: 57px;
   letter-spacing: 0.2px;
+  text-align: center;
   text-align: left;
 }
 .type-features__paragraph {
@@ -314,6 +330,7 @@ a {
   font-weight: 700;
   line-height: 20px;
   letter-spacing: 0.2px;
+  text-align: center;
   text-align: left;
 }
 .type-features__link {
@@ -645,17 +662,16 @@ a {
   background: url("assets/linkedin.svg") 0 0 no-repeat;
 }
 
-@media (min-width: 1200px) {
-  .hero__header {
-    width: 1080px;
-    margin: 0 auto;
-  }
+@media (min-width: 992px) {
   .hero__menu {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     position: static;
     background-color: transparent;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    border-radius: 0;
   }
   .hero__menu li {
     margin-left: 51px;
@@ -680,14 +696,14 @@ a {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     width: 400px;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
     margin: 71px auto 0;
-  }
-  .hero__screen {
-    width: 1080px;
   }
 
   .features {
@@ -700,6 +716,12 @@ a {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-top: 101px;
+  }
+  .features__card {
+    margin-top: 0;
   }
 
   .process {
@@ -710,9 +732,10 @@ a {
     grid-template-columns: repeat(2, 1fr);
     -ms-grid-rows: (auto)[2];
     grid-template-rows: repeat(2, auto);
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: end;
+    justify-items: start;
   }
 
   .process > *:nth-child(1) {
@@ -734,17 +757,20 @@ a {
     -ms-grid-row: 2;
     -ms-grid-column: 2;
   }
-  .process__title {
-    width: 494px;
+  .process__description {
+    width: 100%;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
   }
-  .process__paragraph {
-    width: 477px;
+  .process__title {
+    margin-bottom: 46px;
   }
   .process__buttons {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin: 0;
+    margin-top: 36px;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -764,6 +790,9 @@ a {
     -ms-grid-row: 1;
     -ms-grid-row-span: 2;
     grid-row: 1/3;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
   }
 
   .type-features {
@@ -1051,6 +1080,11 @@ a {
     margin-left: 7px;
   }
 }
+@media (width: 1024px) {
+  .collaborative {
+    margin-top: 45px;
+  }
+}
 @media (min-width: 768px) and (max-width: 991px) {
   .type-features__link {
     margin-left: 185px;
@@ -1075,7 +1109,6 @@ a {
   }
   .features__card {
     width: 100%;
-    margin: 15px auto 0;
     padding: 35px 25px 50px;
   }
   .features__card__title {
@@ -1090,17 +1123,8 @@ a {
 
   .process__title {
     width: 100%;
-    text-align: center;
   }
   .process__paragraph {
-    width: 100%;
-  }
-  .process__screen {
-    width: 283px;
-    height: auto;
-    margin: 0;
-  }
-  .process__screen img {
     width: 100%;
   }
 
@@ -1109,6 +1133,9 @@ a {
   }
   .type-features__paragraph {
     width: 100%;
+  }
+  .type-features__link {
+    margin-left: 0;
   }
   .type-features__screen {
     width: 283px;
@@ -1169,6 +1196,12 @@ a {
 
   .btn {
     width: 250px;
+  }
+}
+@media (max-width: 320px) {
+  .hero__sign-up {
+    font-size: 14px;
+    padding: 16px 14px;
   }
 }
 .divider {
