--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -1,3 +1,8 @@
+$cyan: #03D6F3;
+$blue: #37BDA6;
+$purple: #CB1AE8;
+$white: #ffffff;
+$darkgray: #5C5C5C;
 * {
   box-sizing: border-box;
   margin: 0;
@@ -8,12 +13,16 @@ body {
 }
 
 a {
-  color: #ffffff;
+  color: $white;
   text-decoration: none;
 }
 
 .hidden {
   display: none;
+}
+
+@mixin gradient {
+  background: linear-gradient(45deg, $blue, $purple);
 }
 
 @mixin button-typography {
@@ -34,11 +43,30 @@ a {
   text-align: center;
 }
 
+@mixin card-title-typography {
+  font-size: 29px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 33px;
+  letter-spacing: 0.1px;
+  text-align: center;
+
+}
+
 @mixin paragraph-typography {
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
   line-height: 20px;
+  letter-spacing: 0.2px;
+  text-align: center;
+}
+
+@mixin card-content-typography {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 27px;
   letter-spacing: 0.2px;
   text-align: center;
 }
