поправила секции type-features, pricing, solution, добавила миксины для стилей

--- a/src/includes/type-faetures.pug
+++ b/src/includes/type-faetures.pug
@@ -9,7 +9,7 @@ section.type-features
       their schedule.
     a.type-features__link LEARN MORE
   .type-features__screen
-      img(src="assets/type-features-screen-desktop.png" alt="type features screenshot" width="579" height="600" class="desktop-img")
+      img(src="assets/type-features-screen.png" alt="type features screenshot" width="579" height="600")
   .type-features__button
       +button('#', 'cyan-mini', 'Button')
 
