--- a/src/styles/_type-features.scss
+++ b/src/styles/_type-features.scss
@@ -27,8 +27,8 @@
     text-align: left;
   }
 
-  &__screen {//to fix
-    width: 463px;
+  &__screen {
+    width: 100%;
     height: auto;
     margin-top: 70px;
     img {
