--- a/docs/style.css
+++ b/docs/style.css
@@ -159,7 +159,7 @@ a {
 .cyan-common {
   background-color: #03D6F3;
   padding: 18px 0;
-  width: 251px;
+  width: 94%;
 }
 
 .cyan-border {
@@ -341,7 +341,7 @@ a {
   text-align: left;
 }
 .type-features__screen {
-  width: 463px;
+  width: 100%;
   height: auto;
   margin-top: 70px;
 }
@@ -357,7 +357,7 @@ a {
   width: 100%;
   height: auto;
   margin-top: 50px;
-  padding: 72px 30px 62px 30px;
+  padding: 72px 6% 62px 6%;
 }
 .solution__title {
   width: 374px;
@@ -381,7 +381,7 @@ a {
   text-align: center;
 }
 .solution__screen {
-  width: 463px;
+  width: 100%;
   height: auto;
   margin: 79px auto 0;
 }
@@ -396,7 +396,7 @@ a {
 .pricing {
   width: 100%;
   height: auto;
-  padding: 60px 94px 94px 103px;
+  padding: 60px 94px 103px 94px;
   margin-top: 47px;
 }
 .pricing__title {
@@ -412,7 +412,6 @@ a {
 .pricing__paragraph {
   margin-top: 22px;
   margin-bottom: 65px;
-  color: #5C5C5C;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -429,12 +428,13 @@ a {
   border-radius: 10px;
 }
 .pricing__card__title {
-  font-size: 30px;
+  font-size: 29px;
   font-style: normal;
   font-weight: 700;
   line-height: 33px;
   letter-spacing: 0.1px;
   text-align: center;
+  font-size: 30px;
 }
 .pricing__card__description {
   width: 154px;
@@ -469,11 +469,13 @@ a {
   top: 0;
   left: 45px;
   color: #03D6F3;
-  font-size: 30px;
+  font-size: 29px;
   font-style: normal;
   font-weight: 700;
   line-height: 33px;
   letter-spacing: 0.1px;
+  text-align: center;
+  font-size: 30px;
   text-align: left;
 }
 .pricing__card__price .dollar-sign.professional {
@@ -499,13 +501,21 @@ a {
 }
 .pricing__card__features p {
   margin-top: 20px;
-  font-size: 15px;
+  font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 27px;
   letter-spacing: 0.2px;
+  text-align: center;
+  font-size: 15px;
 }
 .pricing__card__button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-top: 40px;
 }
 
@@ -874,14 +884,14 @@ a {
     margin-top: 51px;
     display: -ms-grid;
     display: grid;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: start;
     justify-items: center;
-    -ms-grid-columns: (1fr)[2];
-    grid-template-columns: repeat(2, 1fr);
-    -ms-grid-rows: (1fr)[2];
-    grid-template-rows: repeat(2, 1fr);
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-grid-columns: (auto)[2];
+    grid-template-columns: repeat(2, auto);
+    -ms-grid-rows: (auto)[2];
+    grid-template-rows: repeat(2, auto);
   }
 
   .solution > *:nth-child(1) {
@@ -905,8 +915,8 @@ a {
   }
   .solution__description {
     -ms-grid-row: 1;
-    -ms-grid-row-span: 2;
-    grid-row: 1/3;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
     grid-column: 1/2;
@@ -921,7 +931,6 @@ a {
     margin: 47px 0 0;
   }
   .solution__screen {
-    width: 824px;
     margin: 0;
     -ms-grid-row: 1;
     -ms-grid-row-span: 2;
@@ -937,13 +946,15 @@ a {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -ms-grid-row-align: start;
+        align-self: start;
+    margin-top: 37px;
     -ms-grid-row: 2;
     -ms-grid-row-span: 1;
     grid-row: 2/3;
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
     grid-column: 1/2;
-    margin-top: 90px;
   }
 
   .pricing__title {
@@ -1084,6 +1095,13 @@ a {
   .collaborative {
     margin-top: 45px;
   }
+
+  .pricing {
+    padding: 60px 20px 103px 20px;
+  }
+  .pricing__card {
+    width: 318px;
+  }
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .type-features__link {
@@ -1137,27 +1155,11 @@ a {
   .type-features__link {
     margin-left: 0;
   }
-  .type-features__screen {
-    width: 283px;
-    height: auto;
-    margin: 0;
-  }
-  .type-features__screen img {
-    width: 100%;
-  }
 
   .solution__title {
     width: 100%;
   }
   .solution__paragraph {
-    width: 100%;
-  }
-  .solution__screen {
-    width: 283px;
-    height: auto;
-    margin: 0;
-  }
-  .solution__screen img {
     width: 100%;
   }
 
