--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -94,7 +94,7 @@
 
   }
 
-  .type-features {// to fix
+  .type-features {
     margin-top: 51px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -138,13 +138,13 @@
   .solution {
     margin-top: 51px;
     display: grid;
-    align-items: start;
     justify-items: center;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    align-items: center;
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(2, auto);
 
     &__description {
-      grid-row: 1/3;
+      grid-row: 1/2;
       grid-column: 1/2;
     }
 
@@ -157,11 +157,9 @@
       width: 301px;
       text-align: left;
       margin: 47px 0 0;
-
     }
 
     &__screen {
-      width: 824px;
       margin: 0;
       grid-row: 1/3;
       grid-column: 2/3;
@@ -170,9 +168,10 @@
     &__buttons {
       display: flex;
       align-items: center;
+      align-self: start;
+      margin-top: 37px;
       grid-row: 2/3;
       grid-column: 1/2;
-      margin-top: 90px;
     }
 
   }
@@ -276,6 +275,14 @@
   .collaborative {
     margin-top: 45px;
   }
+
+  .pricing {
+    padding: 60px 20px  103px 20px;
+
+    &__card {
+      width: 318px;
+    }
+  }
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
@@ -353,15 +360,6 @@
      margin-left: 0;
     }
 
-    &__screen { //to fix
-      width: 283px;
-      height: auto;
-      margin: 0;
-
-      img {
-        width: 100%;
-      }
-    }
   }
 
   .solution {
@@ -371,16 +369,6 @@
 
     &__paragraph {
       width: 100%;
-    }
-
-    &__screen {
-      width: 283px;
-      height: auto;
-      margin: 0;
-
-      img {
-        width: 100%;
-      }
     }
 
   }
@@ -400,8 +388,8 @@
       width: 290px;
       padding: 15px;
     }
-
   }
+
   .subscribe {
     &__form {
       width: 290px;
@@ -426,12 +414,12 @@
     }
   }
 
-
   .btn {
     width: 250px;
   }
 
 }
+
 
 @media (max-width: 320px) {
   .hero {
@@ -440,4 +428,5 @@
       padding: 16px 14px;
     }
   }
+
 }
