--- a/src/styles/_pricing-card.scss
+++ b/src/styles/_pricing-card.scss
@@ -6,26 +6,15 @@
   border-radius: 10px;
 
   &__title {
-    //typography
+    @include  card-title-typography;
     font-size: 30px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 33px;
-    letter-spacing: 0.1px;
-    text-align: center;
   }
 
   &__description {
     width: 154px;
     margin: 10px auto 0;
-    //typography
     color: #5C5C5C;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 18px;
-    letter-spacing: 0.1px;
-    text-align: left;
+    @include price-description-typography;
   }
 
   &__image {
@@ -54,11 +43,8 @@
       left: 45px;
       //typography
       color: #03D6F3;
+      @include card-title-typography;
       font-size: 30px;
-      font-style: normal;
-      font-weight: 700;
-      line-height: 33px;
-      letter-spacing: 0.1px;
       text-align: left;
 
       &.professional {
@@ -74,15 +60,8 @@
     .per-month {
       display: inline-block;
       margin-left: 10px;
-
-      //typography
       color: #5C5C5C;
-      font-size: 12px;
-      font-style: normal;
-      font-weight: 700;
-      line-height: 18px;
-      letter-spacing: 0.1px;
-      text-align: left;
+      @include price-description-typography;
 
     }
   }
@@ -93,17 +72,15 @@
 
     p {
       margin-top: 20px;
-      //typography
+      @include card-content-typography;
       font-size: 15px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 27px;
-      letter-spacing: 0.2px;
 
     }
   }
 
   &__button {
+    display: flex;
+    justify-content: center;
     margin-top: 40px;
   }
 
