--- a/src/styles/_solution.scss
+++ b/src/styles/_solution.scss
@@ -2,34 +2,23 @@
   width: 100%;
   height: auto;
   margin-top: 50px;
-  padding: 72px 30px 62px 30px;
+  padding: 72px 6% 62px 6%;
 
   &__title {
     width: 374px;
     margin: 0 auto;
-    //typography
-    font-size: 46px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 57px;
-    letter-spacing: 0.2px;
-    text-align: center;
+   @include title-typography;
   }
+
   &__paragraph {
     width: 352px;
     margin: 27px auto 0;
-    //typography
     color: #5C5C5C;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 27px;
-    letter-spacing: 0.2px;
-    text-align: center;
+    @include card-content-typography;
   }
 
   &__screen {
-    width: 463px;
+    width: 100%;
     height: auto;
     margin: 79px auto 0;
     img {
