доделала секцию subscribe и footer

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -3,7 +3,7 @@
   height: auto;
   background-color: #112D57;
   margin-top: 47px;
-  padding: 52px 94px 86px 94px;
+  padding: 52px 18% 86px 18%;
   color: white;
 
   &__menu {
@@ -29,19 +29,16 @@
 
   &__paragraph {
     margin-top: 66px;
-    //typography
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 18px;
-    letter-spacing: 0.1px;
-    text-align: left;
+    @include price-description-typography;
   }
 
   &__map {
     width: 334px;
     margin: 87px auto 0;
-
+   img {
+     width: 100%;
+     height: auto;
+   }
 
   }
 
