--- a/docs/style.css
+++ b/docs/style.css
@@ -528,11 +528,11 @@ a {
 .subscribe__title {
   font-size: 46px;
   font-style: normal;
-  text-transform: uppercase;
   font-weight: 500;
   line-height: 57px;
   letter-spacing: 0.2px;
   text-align: center;
+  text-transform: uppercase;
 }
 .subscribe__paragraph {
   margin-top: 27px;
@@ -572,6 +572,7 @@ a {
   font-weight: 500;
   line-height: 16px;
   letter-spacing: 0.2px;
+  text-align: left;
   text-align: center;
 }
 
@@ -580,7 +581,7 @@ a {
   height: auto;
   background-color: #112D57;
   margin-top: 47px;
-  padding: 52px 94px 86px 94px;
+  padding: 52px 18% 86px 18%;
   color: white;
 }
 .footer__menu {
@@ -615,6 +616,10 @@ a {
 .footer__map {
   width: 334px;
   margin: 87px auto 0;
+}
+.footer__map img {
+  width: 100%;
+  height: auto;
 }
 .footer__contacts {
   margin-top: 97px;
@@ -994,7 +999,8 @@ a {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    padding: 0 94px 62px 94px;
+    justify-items: center;
+    padding: 0 1% 62px 1%;
   }
 
   .footer > *:nth-child(1) {
@@ -1033,6 +1039,12 @@ a {
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
     grid-column: 1/2;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  .footer__menu__right {
+    margin-left: 84px;
   }
   .footer__paragraph {
     -ms-grid-row: 2;
@@ -1041,11 +1053,12 @@ a {
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
     grid-column: 1/2;
+    margin-top: 0;
   }
   .footer__map {
     -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1/2;
+    -ms-grid-row-span: 2;
+    grid-row: 1/3;
     -ms-grid-column: 2;
     -ms-grid-column-span: 1;
     grid-column: 2/3;
@@ -1101,6 +1114,10 @@ a {
   }
   .pricing__card {
     width: 318px;
+  }
+
+  .footer__menu__right {
+    margin-left: 24px;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
@@ -1180,17 +1197,12 @@ a {
   .subscribe__form {
     width: 290px;
   }
+  .subscribe__paragraph {
+    padding: 0 10px;
+  }
 
   .footer {
-    padding: 15px;
-  }
-  .footer__map {
-    width: 283px;
-    height: auto;
-    margin: 10px 0 0;
-  }
-  .footer__map img {
-    width: 100%;
+    padding: 52px 5% 86px 5%;
   }
   .footer__contacts {
     margin-top: 40px;
@@ -1205,10 +1217,14 @@ a {
     font-size: 14px;
     padding: 16px 14px;
   }
+
+  .footer__map {
+    width: 288px;
+  }
 }
 .divider {
   width: 90%;
   height: 1px;
-  margin: 0 auto;
+  margin: 47px auto 0;
   background-color: #d2d2d2;
 }
