--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -211,21 +211,29 @@
     grid-template-rows: repeat(2, auto);
     grid-template-columns: repeat(3, auto);
     align-items: center;
-    padding: 0 94px 62px 94px;
+    justify-items: center;
+    padding: 0 1% 62px 1%;
 
     &__menu {
       grid-row: 1/2;
       grid-column: 1/2;
+      justify-content: flex-end;
+
+      &__right {
+        margin-left: 84px;
+      }
     }
 
     &__paragraph {
       grid-row: 2/3;
       grid-column: 1/2;
+      margin-top: 0;
     }
 
     &__map {
-      grid-row: 1/2;
+      grid-row: 1/3;
       grid-column: 2/3;
+
     }
 
     &__contacts {
@@ -283,6 +291,17 @@
       width: 318px;
     }
   }
+
+  .footer {
+    &__menu {
+
+      &__right {
+        margin-left: 24px;
+      }
+    }
+  }
+
+
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
@@ -292,9 +311,6 @@
 
 }
 
-@media (max-width: 767px) {
-
-}
 
 @media (max-width: 479px) {
   .hero {
@@ -394,20 +410,14 @@
     &__form {
       width: 290px;
     }
+
+    &__paragraph {
+      padding: 0 10px;
+    }
   }
 
   .footer {
-    padding: 15px;
-
-    &__map {
-      width: 283px;
-      height: auto;
-      margin: 10px 0 0;
-
-      img {
-        width: 100%;
-      }
-    }
+    padding: 52px 5% 86px 5%;
 
     &__contacts {
       margin-top: 40px;
@@ -426,6 +436,12 @@
     &__sign-up {
       font-size: 14px;
       padding: 16px 14px;
+    }
+  }
+
+  .footer {
+    &__map {
+      width: 288px;
     }
   }
 
