--- a/src/styles/_subscribe.scss
+++ b/src/styles/_subscribe.scss
@@ -5,26 +5,14 @@
   text-align: center;
 
   &__title {
-    //typography
-    font-size: 46px;
-    font-style: normal;
+    @include title-typography;
     text-transform: uppercase;
-    font-weight: 500;
-    line-height: 57px;
-    letter-spacing: 0.2px;
-    text-align: center;
   }
 
   &__paragraph {
     margin-top: 27px;
-    //typography
     color: #5C5C5C;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 27px;
-    letter-spacing: 0.2px;
-    text-align: center;
+   @include card-content-typography;
 
   }
 
@@ -53,12 +41,7 @@
       border-radius: 6px;
       background-color: #03D6F3;
       color: white;
-      //typography
-      font-size: 16px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: 16px;
-      letter-spacing: 0.2px;
+      @include button-typography;
       text-align: center;
 
     }
