--- a/src/includes/features-card.pug
+++ b/src/includes/features-card.pug
@@ -1,5 +1,5 @@
 mixin featuresCard(extraClass, title,  iconClass)
-  div(class= `features__card ${extraClass}`)
+  div(class= `features__card ${extraClass} card`)
       div(class= `icon ${iconClass}`)
       h3.features__card__title= title
       p.features__card__content.
