--- a/src/includes/footer.pug
+++ b/src/includes/footer.pug
@@ -17,8 +17,8 @@ footer.footer
          p #[span.phone-icon] (239) 555-0108
      ul.social
          a(href="https://twitter.com/" target="_blank" rel="noopener noreferrer")
-           li.twitter
+           li.twitter.social-icon
          a(href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer")
-           li.facebook
+           li.facebook.social-icon
          a(href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer")
-           li.linkedin
+           li.linkedin.social-icon
