--- a/src/includes/pricing-card.pug
+++ b/src/includes/pricing-card.pug
@@ -1,6 +1,6 @@
 include button
 mixin pricingCard(title,  imageSrc, imageAlt, price, extraClass)
-  .pricing__card
+  .pricing__card.card
       h3.pricing__card__title= title
       p.pricing__card__description Brief price Description
       .pricing__card__image
