--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -1,9 +1,13 @@
 $cyan: #03D6F3;
 $blue: #37BDA6;
 $darkblue: #112D57;
+$violet: #bc1ad7;
 $purple: #CB1AE8;
 $white: #ffffff;
+$lightgray: #dedede;
 $darkgray: #5C5C5C;
+$lightblack: #232323;
+$shadowgray: #00000026;
 * {
   box-sizing: border-box;
   margin: 0;
