--- a/src/styles/_features.scss
+++ b/src/styles/_features.scss
@@ -20,8 +20,8 @@
     margin: 64px auto 0;
     padding: 42px 60px 50px;
     border-radius: 10px;
-    border: 1px solid #dedede;
-    box-shadow: 0 4px 31px 0 #00000026;
+    border: 1px solid $lightgray;
+    box-shadow: 0 4px 31px 0 $shadowgray;
 
     &:first-child {
       margin-top: 0;
