--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -21,8 +21,8 @@
     width: 95%;
     top: 90px;
     left: 2%;
-    background-color: #bc1ad7;
-    box-shadow: 0 0 14px #232323;
+    background-color: $violet;
+    box-shadow: 0 0 14px $lightblack;
     border-radius: 6px;
     list-style: none;
     padding: 10px 15px;
@@ -49,7 +49,7 @@
   &__sign-up {
     display: inline-block;
     padding: 18px 29px;
-    border: 1px solid #ffffff;
+    border: 1px solid $white;
     border-radius: 39px;
    @include button-typography;
   }
@@ -57,14 +57,14 @@
   &__promo-title {
     margin: 0 auto;
     width: 77%;
-    color: #ffffff;
+    color: $white;
     @include title-typography;
   }
 
   &__promo-subtitle {
     margin: 27px auto 0;
     width: 77%;
-    color: #ffffff;
+    color: $white;
     @include paragraph-typography;
   }
 
