--- a/src/styles/_pricing-card.scss
+++ b/src/styles/_pricing-card.scss
@@ -41,8 +41,7 @@
       position: absolute;
       top: 0;
       left: 45px;
-      //typography
-      color: #03D6F3;
+      color: $cyan;
       @include card-title-typography;
       font-size: 30px;
       text-align: left;
@@ -60,7 +59,7 @@
     .per-month {
       display: inline-block;
       margin-left: 10px;
-      color: #5C5C5C;
+      color: $darkgray;
       @include price-description-typography;
 
     }
