--- a/src/styles/_subscribe.scss
+++ b/src/styles/_subscribe.scss
@@ -26,7 +26,7 @@
       padding: 16px 0;
       margin-bottom: 12px;
       text-align: center;
-      color: #5C5C5C;
+      color: $darkgray;
       background-color: #EFEFEF;
       border: 1px solid #D0D0D0;
       border-radius: 7px;
@@ -39,8 +39,8 @@
       padding: 23px 0;
       border: none;
       border-radius: 6px;
-      background-color: #03D6F3;
-      color: white;
+      background-color:$cyan;
+      color: $white;
       @include button-typography;
       text-align: center;
 
